# context-lockr

./: Cargo.toml  README.md
.agentc/: agentc.json
.github/workflows/: release.yml
agentc/: agentc.json
src/: glossary.rs  lib.rs  main.rs  shredder.rs
