[package]
name = "context-lockr"
version = "0.1.0"
edition = "2021"
authors = ["Delaney Burke <delaney@zero2one.ee>"]
license = "MIT"
description = "LLM-native content protection - lock files so only LLMs can decode them"
repository = "https://github.com/zero20nemvp/context-lockr"
keywords = ["llm", "content-protection", "encoding", "security"]
categories = ["command-line-utilities", "encoding"]
readme = "README.md"

[[bin]]
name = "cl"
path = "src/main.rs"

[[bin]]
name = "decode"
path = "src/bin/decode.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
anyhow = "1.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
